# bmrk

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  Cargo.toml  HELP.txt  HELP_UNIX.txt  HELP_WINDOWS.txt  LICENSE  README.md  bm.bat  bm.ps1  bm.sh  dt.bat  install-linux.sh  install-windows-binary.ps1  install-windows-wrapper.ps1  uninstall-linux.sh  uninstall-windows.ps1
.github/workflows/: ci.yml  release.yml
docs/: DEMOS.md  SUMMARY.md  architecture.md  cli-options.md  configuration.md  contributing.md  features.md  getting-started.md  installation.md  introduction.md  keybindings.md  troubleshooting.md  usage.md
docs/assets/: .gitkeep  README.md
src/: app.rs  bookmarks.rs  config.rs  dir_size.rs  disks.rs  event_handler.rs  file_icons.rs  file_viewer.rs  lib.rs  main.rs  navigation.rs  platform.rs  search.rs  terminal.rs  tree_node.rs  ui.rs
src/theme/: mod.rs  presets.rs
tests/: quit_on_file_test.rs  tail_mode_test.rs
