# Cargo.toml
[package]
name = "dtree-tui"
version = "1.3.0"
edition = "2021"
authors = ["holgertkey"]
license = "MIT"
description = "A fast, lightweight TUI for interactive directory tree navigation with file preview and fuzzy search"
repository = "https://github.com/holgertkey/dtree"
keywords = ["cli", "tui", "directory", "tree", "file-manager"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
exclude = [
    ".claude/",
    "demos/",
    "docs/assets/*.gif",
    "install-*.sh",
    "install-*.ps1",
    "uninstall-*.sh",
    "uninstall-*.ps1",
    "dt.bat",
    "*.backup",
]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
arboard = "3.4"
unicode-width = "0.1"
unicode-truncate = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
syntect = "5.2"
once_cell = "1.19"
crossbeam-channel = "0.5"
fuzzy-matcher = "0.3"
which = "6.0"
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Force patched version to fix RUSTSEC-2026-0009 (DoS via stack exhaustion in time < 0.3.47)
time = ">=0.3.47"

[[bin]]
name = "dtree"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.13"

[package.metadata.cargo-audit.ignore]
# bincode 1.3.3 unmaintained (RUSTSEC-2025-0141) - transitive dep of syntect, no upstream fix available
# yaml-rust 0.4.5 unmaintained (RUSTSEC-2024-0320) - transitive dep of syntect, no upstream fix available
# paste 1.0.15 unmaintained (RUSTSEC-2024-0436) - transitive dep of ratatui, no upstream fix available
# lru 0.12.5 unsound (RUSTSEC-2026-0002) - transitive dep of ratatui, awaiting upstream fix
ignore = [
    "RUSTSEC-2025-0141",
    "RUSTSEC-2024-0320",
    "RUSTSEC-2024-0436",
    "RUSTSEC-2026-0002",
]

[profile.release]
# Optimize for size
opt-level = "z"         # Optimize for size instead of speed
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Strip symbols from binary
panic = "abort"         # Abort on panic instead of unwinding (smaller binary)