# Cargo.toml
[package]
name = "bmrk"
version = "0.1.0+005"
edition = "2021"
authors = ["holgertkey"]
license = "MIT"
description = "A fast TUI for directory navigation and bookmark management"
repository = "https://github.com/holgertkey/bmrk"
keywords = ["cli", "tui", "bookmarks", "directory", "navigation"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
exclude = [
    ".claude/",
    ".github/",
    "demos/",
    "docs/assets/*.gif",
    "*.backup",
]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
crossbeam-channel = "0.5"
fuzzy-matcher = "0.3"
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }
# Force patched version to fix RUSTSEC-2026-0009 (DoS via stack exhaustion in time < 0.3.47)
time = ">=0.3.47"

[[bin]]
name = "bmrk"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.13"

[package.metadata.cargo-audit.ignore]
# paste 1.0.15 unmaintained (RUSTSEC-2024-0436) - transitive dep of ratatui, no upstream fix available
# lru 0.12.5 unsound (RUSTSEC-2026-0002) - transitive dep of ratatui, awaiting upstream fix
ignore = [
    "RUSTSEC-2024-0436",
    "RUSTSEC-2026-0002",
]

[profile.release]
# Optimize for size
opt-level = "z"         # Optimize for size instead of speed
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Strip symbols from binary
panic = "abort"         # Abort on panic instead of unwinding (smaller binary)